# runtimes-common

./: .buildifier.sh  .gitignore  .gofmt.sh  .project  .travis.yml  BUILD  BUILD.bazel  Dockerfile  Gopkg.toml  README.md  WORKSPACE  cloudbuild.json  dedupe.py  e2e_test.json  ftl_node_integration_tests.yaml  out.yaml  reconciletags_cloudbuild.yaml  requirements.txt  structure_test_cloudbuild.yaml  structure_tests.test  test.json  test.sh
Godeps/: Godeps.json
appender/: BUILD.bazel  main.go
appender/cmd/: BUILD.bazel  integration_test.go  root.go
appender/layer/: BUILD.bazel  layer.go
apt_builder/: Dockerfile  build.sh  cloudbuild.yaml  cloudbuild.yaml.in  generate_dockerfile.go  install_packages.py  templates.go  types.go
apt_installer/: Dockerfile  build.sh  cloudbuild.yaml  generate_dockerfile.go  installer_test.go  templates.go  types.go
check_if_image_tag_exists/: Dockerfile  README.md  auth.json  build.sh  cloudbuild.yaml  cloudbuild.yaml.in  main.py  structure_test.json  structure_test.yaml  structure_test_2.yaml  test_config.json
ctc_lib/: BUILD  BUILD.bazel  CLI_interface.go  README.md  cli_interface.go  config_command_test.go  container_tool_command.go  container_tool_command_base.go  container_tool_command_test.go  container_tool_list_command.go  container_tool_list_command_failures_test.go  container_tool_list_command_test.go  ctc_lib.go  hooks.go  template_test.go  update_check.go  version.go
ctc_lib/config/: BUILD.bazel  config.go
ctc_lib/constants/: constants.go
ctc_lib/container_command_output/: container_command_output.go
ctc_lib/examples/: README.md  main.go
ctc_lib/examples/cmd/: root.go
ctc_lib/flags/: BUILD  BUILD.bazel  flags.go
ctc_lib/help/: help.go
ctc_lib/logging/: BUILD.bazel  log.go  log_formatter.go  log_manager.go  stdout_log_hook.go
ctc_lib/notify/: BUILD.bazel
ctc_lib/sub_command/: sub_command.go
ctc_lib/types/: loglevel.go
ctc_lib/util/: BUILD  BUILD.bazel  util.go
ctc_lib/version/: version.go
ctc_lib/writer/: writer.go
demo/: BUILD
docgen/: BUILD  README.md  WORKSPACE
ftl/: BUILD  BUILD.bzl  CHANGELOG.md  README.md  cache_cloudbuild.yaml  ftl_node_benchmark_yaml.py  ftl_node_integration_tests.yaml  ftl_node_integration_tests_yaml.py  ftl_node_release.yaml  ftl_php_benchmark_yaml.py  ftl_php_integration_tests.yaml  ftl_php_integration_tests_yaml.py  ftl_php_release.yaml  ftl_python_benchmark_yaml.py  ftl_python_integration_tests.yaml  ftl_python_release.yaml  ftl_release.yaml
ftl/node/cached/: BUILD.bazel
functional_tests/: README.md
hack/: integration_test.go  kokoro-test.sh
iDiff/: .iDiffTests.sh  README.md  fileDiff_test_processor.py  iDiff_test.go~  main.go  undocker.py
integration_tests/: Dockerfile  README.md  app.yaml  auth.json  build.sh  build_and_deploy.sh  cloudbuild.yaml.in  deploy_check.py  requirements.txt  structure_test.yaml  test.py  test_runtime_image.py
integrationtest/tuf/: BUILD.bazel  kms_test.go  upload_secrets_test.go
rake/: Dockerfile  cloudbuild.yaml
reconcile-tags/: debian.json  reconcile-tags.py
reconciletags/: BUILD  application_default_credentials.json  bucket_acl_test.py  cloudbuild.yaml  config_integrity_test.py  data_integrity_test.py  debian.json  latest_age_test.py  reconciletags.py  reconciletags_e2e_test.py  reconciletags_main.py  reconciletags_test.py  sample.json
release_notes/: release_notes.py
runtime_builders/: builder_util.py  data_integrity.py  publish_builders.py  publish_runtime.py  template_builder.py  test_manifest.py  (+1 more)
structure-test/: BUILD.bazel  Makefile  README.md  structure_test.go  tests.bzl  types.go
structure-test/drivers/: BUILD.bazel  docker_driver.go  driver.go  tar_driver.go
structure-test/tests/: structure_test_tests.sh
structure-test/types/unversioned/: BUILD.bazel
structure-test/types/v1/: BUILD.bazel  command.go  licenses.go  structure.go
structure-test/types/v2/: BUILD.bazel  command.go  licenses.go  structure.go
structure-test/utils/: BUILD.bazel
structure_tests/: .gitignore  BUILD  BUILD.bazel  Dockerfile  Makefile  README.md  build.sh  cfg.json  cloudbuild.yaml  cloudbuild.yaml.in  command_test_types.go  command_test_v0.go  command_test_v1.go  diff.txt  ext_run.sh  file_content_test_types.go  file_content_test_v0.go  file_content_test_v1.go  file_existence_test_types.go  file_existence_test_v0.go  file_existence_test_v1.go  licenses_test.go  log_wrapper.go  open_files.txt  run.sh  structure_test  structure_test.go  structure_test_cloudbuild.yaml  structure_test_release_cloudbuild.yaml  structure_test_types.go  structure_test_v0.go  structure_test_v000.go  structure_test_v1.go  structure_test_v100.go  types.go
structure_tests/drivers/: dockerDriver.go  docker_driver.go  driver.go  internalDriver.go  internal_driver.go  tar_driver.go
structure_tests/tests/: cloudbuild.yaml.in  structure_test_tests.sh
structure_tests/types/: utils.go
structure_tests/types/v1/: licenses.go  structure.go
structure_tests/types/v2/: BUILD  licenses.go  metadata.go  structure.go
structure_tests/utils/: BUILD  utils.go
tuf/: BUILD  BUILD.bazel  README.md  keys.json  main.go  test_if_secret_exits.sh
tuf/cmd/: BUILD.bazel  generate_key.go  generate_key_test.go  root.go  upload_secrets.go  upload_secrets_test.go
tuf/config/: BUILD.bazel  config.go
tuf/constants/: BUILD.bazel  constants.go
tuf/deployer/: BUILD.bazel  deployer.go  deployer_test.go
tuf/deployer/testdata/: testRoot.json  testRootSecret.key  testSnapshotSecret.key  testTargetSecret.key
tuf/gcs/: BUILD.bazel  gcs.go
tuf/integrationtest/: BUILD.bazel  keys.json.enc  kms_test.go  upload_secrets_test.go
tuf/kms/: BUILD.bazel  kms.go  kms_test.go
tuf/metadata/: BUILD.bazel  base.go
tuf/metadata/v1/: BUILD.bazel  config.go  target_metadata.go  tuf.go  tuf_test.go  tuf_testutil.go
tuf/scheme/: BUILD.bazel  ecdsa_sha256.go  ecdsa_sha256_test.go  scheme.go  scheme_test.go
tuf/test_util/: BUILD.bazel  mock_util.go
tuf/testutil/: BUILD.bazel  mock_util.go  testkey.go  util.go
tuf/types/: BUILD.bazel  crypto_scheme.go  types.go
(+325 files in other folders)
