load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/GoogleCloudPlatform/runtimes-common/appender",
    visibility = ["//visibility:private"],
    deps = ["//appender/cmd:go_default_library"],
)

go_binary(
    name = "appender",
    embed = [":go_default_library"],
    importpath = "github.com/GoogleCloudPlatform/runtimes-common/appender",
    visibility = ["//visibility:public"],
)
