load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "cli_interface.go",
        "container_tool_command.go",
        "container_tool_command_base.go",
        "container_tool_list_command.go",
        "ctc_lib.go",
        "help.go",
        "hooks.go",
        "version.go",
    ],
    importpath = "github.com/GoogleCloudPlatform/runtimes-common/ctc_lib",
    visibility = ["//visibility:public"],
    deps = [
        "//ctc_lib/flags:go_default_library",
        "//ctc_lib/types:go_default_library",
        "//ctc_lib/util:go_default_library",
        "//vendor/github.com/sirupsen/logrus:go_default_library",
        "//vendor/github.com/spf13/cobra:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "container_tool_command_test.go",
        "container_tool_list_command_test.go",
    ],
    embed = [":go_default_library"],
    deps = [
        "//vendor/github.com/sirupsen/logrus/hooks/test:go_default_library",
        "//vendor/github.com/spf13/cobra:go_default_library",
    ],
)
