load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library", "go_test")

licenses(["notice"])

package(default_visibility = ["//visibility:public"])

sh_binary(
    name = "ext_run",
    srcs = ["ext_run.sh"],
)

go_library(
    name = "go_default_library",
    srcs = ["types.go"],
    importpath = "github.com/GoogleCloudPlatform/runtimes-common/structure-test",
    deps = [
        "//structure-test/drivers:go_default_library",
        "//structure-test/types/v1:go_default_library",
        "//structure-test/types/v2:go_default_library",
    ],
)

go_binary(
    name = "structuretests",
    importpath = "github.com/GoogleCloudPlatform/runtimes-common/structure-test",
    library = ":go_default_library",
)

go_test(
    name = "go_default_test",
    srcs = ["structure_test.go"],
    importpath = "github.com/GoogleCloudPlatform/runtimes-common/structure-test",
    library = ":go_default_library",
    deps = [
        "//structure-test/drivers:go_default_library",
        "//vendor/github.com/ghodss/yaml:go_default_library",
    ],
)
