load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library", "go_test")
load("@io_bazel_rules_docker//container:container.bzl", "container_image", "container_push")

licenses(["notice"])

package(default_visibility = ["//visibility:public"])

sh_binary(
    name = "ext_run",
    srcs = ["ext_run.sh"],
)

go_library(
    name = "go_default_library",
    srcs = ["types.go"],
    importpath = "github.com/GoogleCloudPlatform/runtimes-common/structure_tests",
    deps = [
        "//structure_tests/drivers:go_default_library",
        "//structure_tests/types/v1:go_default_library",
        "//structure_tests/types/v2:go_default_library",
    ],
)

go_binary(
    name = "structure_tests",
    importpath = "github.com/GoogleCloudPlatform/runtimes-common/structure_tests",
    library = ":go_default_library",
)

go_test(
    name = "go_default_test",
    srcs = ["structure_test.go"],
    importpath = "github.com/GoogleCloudPlatform/runtimes-common/structure_tests",
    library = ":go_default_library",
    deps = [
        "//structure_tests/drivers:go_default_library",
        "//vendor/github.com/ghodss/yaml:go_default_library",
    ],
    testonly = False,
)

container_image(
    name = "structure_test_image",
    base = "@distroless_base//image",
    files = [":go_default_test"],
    cmd = ["/go_default_test"],
    testonly = False,
)

container_push(
    name = "push_structure_test",
    image = ":structure_test_image",
    format = "Docker",
    registry = "gcr.io",
    repository = "gcp-runtimes/structure-test",
    tag = "bazel",
)
