load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["util.go"],
    importpath = "github.com/GoogleCloudPlatform/runtimes-common/ctc_lib/util",
    visibility = ["//visibility:public"],
    deps = [
        "//ctc_lib/constants:go_default_library",
        "//ctc_lib/flags:go_default_library",
        "//vendor/github.com/sirupsen/logrus:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["util_test.go"],
    embed = [":go_default_library"],
    deps = ["//vendor/github.com/sirupsen/logrus:go_default_library"],
)
