load("@io_bazel_rules_go//go:def.bzl", "go_test")

go_test(
    name = "go_default_test",
    srcs = [
        "kms_test.go",
        "upload_secrets_test.go",
    ],
    deps = [
        "//tuf/cmd:go_default_library",
        "//tuf/config:go_default_library",
        "//tuf/gcs:go_default_library",
        "//tuf/kms:go_default_library",
        "//tuf/testutil:go_default_library",
        "//vendor/gopkg.in/yaml.v2:go_default_library",
    ],
)
