load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["config.go"],
    importpath = "github.com/GoogleCloudPlatform/runtimes-common/tuf/config",
    visibility = ["//visibility:public"],
    deps = [
        "//vendor/github.com/GoogleCloudPlatform/runtimes-common1/tuf/config:go_default_library",
        "//vendor/gopkg.in/yaml.v2:go_default_library",
    ],
)
