load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["constants.go"],
    importpath = "github.com/GoogleCloudPlatform/runtimes-common/tuf/constants",
    visibility = ["//visibility:public"],
    deps = ["//tuf/types:go_default_library"],
)
