load("@io_bazel_rules_go//go:def.bzl", "go_test")

go_test(
    name = "go_default_test",
    srcs = ["kms_test.go"],
    data = [
        "//tuf/integrationtest:testdata",
    ],
    deps = [
        "//tuf/config:go_default_library",
        "//tuf/kms:go_default_library",
    ],
)

filegroup(
    name = "testdata",
    srcs = glob([
        "keys.*",
    ]),
)
