load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["kms.go"],
    importpath = "github.com/GoogleCloudPlatform/runtimes-common/tuf/kms",
    visibility = ["//visibility:public"],
    deps = [
        "//tuf/config:go_default_library",
        "//vendor/golang.org/x/net/context:go_default_library",
        "//vendor/golang.org/x/oauth2/google:go_default_library",
        "//vendor/google.golang.org/api/cloudkms/v1:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["kms_test.go"],
    embed = [":go_default_library"],
    deps = ["//tuf/config:go_default_library"],
)
