load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "testkey.go",
        "util.go",
    ],
    importpath = "github.com/GoogleCloudPlatform/runtimes-common/tuf/testutil",
    visibility = ["//visibility:public"],
    deps = [
        "//tuf/config:go_default_library",
        "//tuf/types:go_default_library",
        "//vendor/gopkg.in/yaml.v2:go_default_library",
    ],
)
