load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["crypto_scheme.go"],
    importpath = "github.com/GoogleCloudPlatform/runtimes-common/tuf/types",
    visibility = ["//visibility:public"],
    deps = ["//tuf/scheme:go_default_library"],
)
