load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["config.go"],
    importpath = "github.com/GoogleCloudPlatform/runtimes-common/tuf/metadata/v1",
    visibility = ["//visibility:public"],
    deps = ["//tuf/metadata:go_default_library"],
)
