load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "config.go",
        "target_metadata.go",
        "tuf.go",
        "tuf_testutil.go",
    ],
    importpath = "github.com/GoogleCloudPlatform/runtimes-common/tuf/metadata/v1",
    visibility = ["//visibility:public"],
    deps = [
        "//tuf/config:go_default_library",
        "//tuf/constants:go_default_library",
        "//tuf/metadata:go_default_library",
        "//tuf/types:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["tuf_test.go"],
    embed = [":go_default_library"],
    deps = [
        "//tuf/metadata:go_default_library",
        "//tuf/testutil:go_default_library",
        "//tuf/types:go_default_library",
    ],
)
